# cpp-perf-timer

./: CMakeLists.txt  README.md  mk
include/perftimer/: perftimer.hpp
src/: main.cpp
